[tool.poetry]
name = "lektor-twitter-embed"
version = "0.2.0"
description = "Lektor template filter to convert twitter links to embeds"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cigar-factory/lektor-twitter-embed"
keywords = ["Lektor plugin"]
classifiers = [
    "Framework :: Lektor",
    "Environment :: Plugins",
]

[tool.poetry.dependencies]
python = ">=3.7"
requests = "2.*"
lektor = "3.*"

[tool.poetry.dev-dependencies]
isort = "^5.11"
flake8 = "^5.0.4"
black = "==23.3.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."lektor.plugins"]
twitter-embed = "lektor_twitter_embed:TwitterEmbedPlugin"
